--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "site:preview": "vitepress preview"
   },
   "dependencies": {
-    "reveal.js": "^5.2.1"
+    "@primeuix/themes": "^1.2.5",
+    "@primevue/themes": "^4.4.1",
+    "markdown-it": "^14.1.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.4.1",
+    "reveal.js": "^5.2.1",
+    "sass-embedded": "^1.93.3"
   }
 }
