Move overview slides

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "site:dev": "vitepress dev",
     "site:build": "vitepress build",
     "site:build:prod": "BASE_PATH=/educator-portal/ vitepress build",
-    "site:preview": "vitepress preview"
+    "site:preview": "vitepress preview",
+    "pres:build": "pandoc src/librelane-materials/slides.md -o src/slides.html -t revealjs"
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.5",
